python/testData/highlighting/unicodeOrByte25.py
_ = "no doc comments in this file"

z = (
    "simple"
    "escaped \u1234 correct"
    "escaped \u123z incorrect"
    "escaped \U12345678 correct"
    "escaped \U1234567 incorrect"
    "hex <info descr="null">\x12</info> correct"
    "hex <error descr="Invalid escape sequence">\x1z</error> incorrect"
    "named \N{comma} correct"
    "named \N{123} incorrect"
    "named \N{foo, incorrect"
    "named incomplete \N{aa"
    #"lone backslash \"
)
z = b"hex <info descr="null">\x12</info> correct"
z = b"hex <info descr="null">\x12</info>3 correct"
z = b"hex <error descr="Invalid escape sequence">\x1z</error> incorrect"
z = b"hex incomplete<error descr="Invalid escape sequence">\x</error>"
z = b"hex incomplete<error descr="Invalid escape sequence">\x1</error>"
z = b"one char <info descr="null">\n</info> correct"
z = b"one char \Q ignored"
z = b"octal <info descr="null">\007</info> correct"
#z = b"octal \27 correct"
#z = b"octal \7 correct"
z = b"octal <error descr="Invalid escape sequence">\008</error> incorrect"
z = b"non-octal \986 ignored"
